# ysaqml

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
api/: index.html
docs/: api.md  index.md  installation.md  usage.md
installation/: index.html
search/: search_index.json
src/ysaqml/: __init__.py  dialect.py  engine.py  sync.py
tests/: test_engine.py
tmp_data/: users.yaml
usage/: index.html
