[project]
name = "ysaqml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rbroderi", email = "richard.broderick@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0",
    "naay>=0.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]
dev = [
    "pytest>=9.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
naay = { git = "https://github.com/rbroderi/naay" }
